# adsk_materialx

./: CMakeLists.txt  JsMaterialXGenShader.data  JsMaterialXGenShader.js  build.sh  build_javascript_win.sh
.github/workflows/: main.yml
documents/Specification/: MaterialX.Specification.md
javascript/: build_javascript.sh  clean_javascript.sh
javascript/MaterialXTest/: package-lock.json
javascript/MaterialXTest/browser/: esslShaderGenerator.spec.js
javascript/MaterialXView/: package-lock.json  package.json  webpack.config.js
javascript/MaterialXView/source/: viewer.js
libraries/bxdf/: gltf_pbr.mtlx  usd_preview_surface.mtlx
libraries/nprlib/: nprlib_ng.mtlx
libraries/stdlib/: convert_materials.mtlx  stdlib_defs.mtlx  stdlib_ng.mtlx
python/Scripts/: definitionMaterials.py  gltftomtlx.py  mxdoc.py  mxequivalent.py
resources/Geometry/: materialx_logo_one.glb  materialx_logo_split.glb
source/JsMaterialX/: CMakeLists.txt
source/JsMaterialX/JsMaterialXFormat/: JsJsonIo.cpp  JsUtil.cpp
source/JsMaterialX/JsMaterialXGenGlsl/: JsGlslShaderGenerator.cpp
source/JsMaterialX/JsMaterialXGenShader/: JsGenContext.cpp
source/JsMaterialX/JsMaterialXGenVk/: JsVkShaderGenerator.cpp
source/MaterialXCore/: Document.h  Interface.cpp  Material.cpp  Node.cpp  Node.h
source/MaterialXFormat/: CMakeLists.txt  Filter.cpp  Filter.h  GraphIO.cpp  GraphIO.h  GraphIo.cpp  JSONIo.cpp  JSONIo.h  JSONio.cpp  JSONio.h  JsonIo.cpp  JsonIo.h
source/MaterialXGenShader/: CMakeLists.txt  ShaderGraph.cpp
source/MaterialXGraphEditor/: Graph.cpp
source/MaterialXRender/: CgltfLoader.cpp  CgltfLoader.h  CgltfMaterialLoader.h  CgtfMaterialLoader.cpp  GeometryHandler.h
source/MaterialXRenderGlsl/: GLTextureHandler.cpp
source/MaterialXTest/: CMakeLists.txt
source/MaterialXTest/MaterialXFormat/: GraphIO.cpp
source/MaterialXTest/MaterialXRender/: RenderUtil.cpp
source/MaterialXTest/MaterialXRenderGlsl/: RenderGlsl.cpp
source/MaterialXTest/MaterialXRenderOsl/: GenReference.cpp
source/MaterialXTest/MaterialXglTF/: MaterialXglTF.cpp
source/MaterialXView/: CMakeLists.txt  Viewer.cpp  Viewer.h
source/MaterialXglTF/: CMakeLists.txt  CgltfMaterialHandler.h  CgltfMaterialLoader.h  CgtfMaterialHandler.cpp  CgtfMaterialLoader.cpp
source/PyMaterialX/: CMakeLists.txt
source/PyMaterialX/PyMaterialXFormat/: PyGraphIO.cpp  (+2 more)
source/PyMaterialX/PyMaterialXglTF/: CMakeLists.txt  PyCgltfMaterialHandler.cpp  PyGltfMaterialHandler.cpp  PyModule.cpp
(+8 files in other folders)
